# springlobby

./: .clang-format  .cproject  .gitattributes  .gitignore  .gitignore.orig  .gitmodules  .mailmap  .project  .travis.yml  AUTHORS  CMakeLists.txt  CMakeLists.txt.orig  CMake_Setup.sh  COMPILATION  COPYING  ChangeLog  Doxyfile  Doxyfile_local  GroupOptions.fbp  INSTALL  Makefile.am  Makefile.in  Makefile.win  NEWS  Project2.dev  Project2.layout  README  README-Settings++  SConstruct  Settings++.dev  Settings++.layout  Settings.dev  Settings.layout  SpringLobby.fbp  SpringLobby.kdevelop  SpringLobby.kdevelop.filelist  SpringLobby.kdevses  SpringLobby.sln  SpringLobby.vcproj  THANKS  (+20 more)
po/: CMakeLists.txt  ChangeLog  LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  README.transifex  ar.po  cs.po  da.gmo  da.po  de.gmo  de.po  el.po  en_US.po  es.po  fi.gmo  fi.po  fr.gmo  fr.po  it.gmo  it.po  pl.po  pt.po  ro.gmo  ro.po  ru.gmo  ru.po  springlobby.pot  springlobby_fr.po  springlobby_pt.po  springlobby_ro.po  springlobby_ru.po  springlobby_sv.po  sv.gmo  sv.po  uk.gmo  uk.po  (+1 more)
src/: CMakeLists.txt  ConfigHandler.cpp  Defs.hpp  Dialog.cpp  Dialog.hpp  DotfileHandler.cpp  DotfileHandler.h  Main.cpp  Main.hpp  Makefile.am  Makefile.in  RegHandler.h  ServerManager.cpp  ServerManager.h  StdAfx.cpp  StdAfx.h  Window.cpp  Window.hpp  aboutbox.cpp  aboutbox.h  addbotdialog.cpp  addbotdialog.h  address.cpp  address.h  agreementdialog.cpp  agreementdialog.h  alsound.cpp  alsound.h  auimanager.cpp  auimanager.h  autobalancedialog.cpp  autobalancedialog.h  autohost.cpp  autohost.h  autohostmanager.cpp  autohostmanager.h  autojoinchanneldialog.cpp  autojoinchanneldialog.h  autopointers.h  base16.cpp  (+340 more)
src/.deps/: base64.Po  channel.Po  channellist.Po  chatlist.Po  chatpanel.Po  chatwindow.Po  connectframe.Po  connectwindow.Po  consolecontrol.Po  main.Po  mainchatpanel.Po  mainchattab.Po  mainchatwindow.Po  mainwindow.Po  md5.Po  protocol.Po  sdlsocket.Po  server.Po  serverevents.Po  settings.Po  socket.Po  springlobbyapp.Po  system.Po  tasprotocol.Po  tasserver.Po  test.Po  ui.Po  uicontrol.Po  user.Po  userlist.Po
src/Helper/: CMakeLists.txt  TextCompletionDatabase.cpp  TextCompletionDatabase.hpp  channelchooser.cpp  channelchooser.h  colorbutton.cpp  colorbutton.h  imageviewer.cpp  imageviewer.h  jpeghandler.cpp  jpeghandler.h  listctrl.cpp  listctrl.h  slconfig.cpp  slconfig.h  slhtmlwindow.cpp  slhtmlwindow.h  sortutil.h  tasclientimport.cpp  tasclientimport.h  utilclasses.h  wxTranslationHelper.cpp  wxTranslationHelper.h  wxtextctrlhist.cpp  wxtextctrlhist.h
src/aui/: CMakeLists.txt  artprovider.cpp  artprovider.h  auibook.cpp  auibook.h  auimanager.cpp  auimanager.h  auiuitls.h  auiutils.h  slbook.cpp  slbook.h
src/battlelist/: CMakeLists.txt  battlelist.cpp  battlelist.h  battlelistctrl.cpp  battlelistctrl.h  battlelistfilter.cpp  battlelistfilter.h  battlelistfiltervalues.h  battlelisttab.cpp  battlelisttab.h
src/boost/: CMakeLists.txt  README.txt  md5.cpp  md5.hpp
src/channel/: CMakeLists.txt  autojoinchanneldialog.cpp  autojoinchanneldialog.h  channel.cpp  channel.h  channelchooser.cpp  channelchooser.h  channelchooserdialog.cpp  channelchooserdialog.h  channellist.cpp  channellist.h  channellistctrl.cpp  channellistctrl.h
src/common/: events.h
src/curl/: base.cpp  base.h  curlthread.cpp  ftp.cpp  ftp.h  http.cpp  http.h  thread.cpp  thread.h  utils.cpp  utils.h
src/downloader/: CMakeLists.txt  downloaddataviewctrl.cpp  downloaddataviewctrl.h  downloaddataviewmodel.cpp  downloaddataviewmodel.h  downloadlistctrl.cpp  downloadlistctrl.h  downloadsobserver.cpp  downloadsobserver.h  httpdownloader.cpp  httpdownloader.h  prdownloader.cpp  prdownloader.cpp.orig  prdownloader.h
src/filelister/: filelistctrl.cpp  filelistctrl.h  filelistdialog.cpp  filelistdialog.h  filelistfilter.cpp  filelistfilter.h
src/gui/: CMakeLists.txt  aboutbox.cpp  aboutbox.h  activitynotice.cpp  activitynotice.h  agreementdialog.cpp  agreementdialog.h  basedataviewctrl.h  basedataviewmodel.h  chatpanel.cpp  chatpanel.h  chatpanelmenu.cpp  chatpanelmenu.h  colorbutton.cpp  colorbutton.h  connectwindow.cpp  connectwindow.h  contentdownloaddialog.cpp  contentdownloaddialog.h  contentsearchresultdatamodel.cpp  contentsearchresultdatamodel.h  contentsearchresultslistctrl.cpp  contentsearchresultslistctrl.h  contentsearchresultview.cpp  contentsearchresultview.h  controls.cpp  controls.h  crashreporterdialog.cpp  crashreporterdialog.h  customdialogs.cpp  customdialogs.h  customlistctrl.cpp  customlistctrl.h  customvirtlistctrl.cpp  customvirtlistctrl.h  dataviewctrlheadermenu.cpp  dataviewvtrlheadermenu.h  downloaddataviewctrl.cpp  downloaddataviewctrl.h  downloaddataviewmodel.cpp  (+71 more)
src/helper/: CMakeLists.txt  TextCompletionDatabase.cpp  TextCompletionDatabase.h  colorbutton.cpp  imageviewer.cpp  imageviewer.h  listctrl.cpp  slconfig.cpp  slconfig.h  slhtmlwindow.cpp  slhtmlwindow.h  sortutil.h  tasclientimport.h  wxTranslationHelper.cpp  wxTranslationHelper.h  wxtextctrlhist.cpp  wxtextctrlhist.h
src/hosting/: CMakeLists.txt  addbotdialog.cpp  addbotdialog.h  autobalancedialog.cpp  autobalancedialog.h  autohost.cpp  autohost.h  autohostmanager.cpp  autohostmanager.h  battlemaptab.cpp  battlemaptab.cpp.orig  battlemaptab.h  battleoptionstab.cpp  battleroomdownloads.cpp  battleroomdownloads.h  battleroomlistctrl.cpp  battleroomlistctrl.h  battleroommmoptionstab.cpp  battleroommmoptionstab.cxx  battleroommmoptionstab.h  battleroomtab.cpp  battleroomtab.h  hostbattledialog.cpp  hostbattledialog.h  mainjoinbattletab.cpp  mainjoinbattletab.h  mainsingleplayertab.cpp  mainsingleplayertab.h  mmoptionwindows.cpp  mmoptionwindows.h
src/images/: Makefile.am  admin.png.h  admin.xpm  admin_away.png.h  admin_away.xpm  admin_broom.png.h  admin_broom.xpm  admin_ingame.png.h  admin_ingame.xpm  arm.xpm  arrow_refresh.png.h  away.png.h  away.xpm  battle.xpm  battle_list.xpm  battle_map.xpm  battle_settings.xpm  bot.xpm  bot_away.xpm  bot_broom.png.h  bot_broom.xpm  bot_ingame.png.h  bot_ingame.xpm  (+110 more)
(+1046 files in other folders)
